--- a/.github/workflows/variables.yml
+++ b/.github/workflows/variables.yml
@@ -13,3 +13,8 @@ jobs:
         run: echo "$SALUDO, $NOMBRE. Hoy es $DIA_DE_SEMANA!"
         env:
           NOMBRE: Juan
+  saludo-secreto:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Saludar con secreto
+        run: echo "$SALUDO, ${{vars.NOMBRE}}. Tu contraseña es ${{secrets.CONTRASENA}}"
